公共情報コモンズの避難勧告指示解除情報の配信を設定ファイルの時間だけ引き延ばすように修正

--- a/plugins/lgdis/config/evacuation_advisory.yml.example
+++ b/plugins/lgdis/config/evacuation_advisory.yml.example
@@ -116,10 +116,15 @@ sort_criteria_map:
       - "5"
       - "1"
 
+# 解除発令時間の設定（時間単位）
+lift_term: 24
+
 # 大地区の設定
 big_area:
- - ××
-
-# 中地区の設定
+  - "○○"
+# 小地区の設定
 middle_area:
- - ○○
+  "○○":
+    - "１１"
+    - "２２"
+    - "３３"
